# strongswan

src/charon-nm/: Makefile.am  nm-strongswan-service.name.in
src/frontends/gnome/: Makefile.am  configure.ac  nm-strongswan-service.name.in
src/frontends/gnome/auth-dialog/: Makefile.am  main.c
src/frontends/gnome/debian/: control
src/frontends/gnome/properties/: nm-strongswan-dialog.ui
